Updated index.html with new paragraph

--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> This Is The Periodic Table</title>
 </head>
 <body>
-  <center>
-<h1>PERIODIC TABLE</h1> </center>  <br>
 <center>
-<h1><b> <i>
+    <section style="background-color: green;"><h1>PERIODIC TABLE</h1> </section></center>  <br>
+<center>
+  <div style="background-color: blueviolet;"><h1><b> <i>
   MADE BY ZEESHAN ABBASI 
 </h1> </b></i> </center>
+<br>
+<p>AUTHER ZEESHAN ABBASSI </p>
 <center>
- <table border="8px">
+ <table border="8px" bordercolor="white" >
   <tr>
    <th bgcolor="red">1<br>
      H</th> 
@@ -74,7 +76,10 @@ V</th><th bgcolor="green">24 <br>
 <tr>
   <th bgcolor="yellow">37<br>
   Rb</th> <th bgcolor="yellow">38<br>
-  Y</th> <th bgcolor="yellow">40<br>
+   SR </th> 
+   <th bgcolor="yellow">LA TO YB</th>
+   <th bgcolor="yellow">39 <br>
+   Y</th> <th bgcolor="yellow">40<br>
   zr</th><th bgcolor="yellow">41<br>
   Nb</th><th bgcolor="yellow">42<br>
   Mo</th> <th bgcolor="yellow">43<br>
@@ -91,14 +96,14 @@ Te</th><th bgcolor="yellow">53<br>
 I</th><th bgcolor="yellow">54<br>
 Xe</th></tr>
 <tr>
-  <th bgcolor="skyblue">55<br>
-  Cs </th><th bgcolor="skyblue"> 56<br>
-  Ba</th><th bgcolor="skyblue">La To Yb</th><th bgcolor="skyblue">57<br>
-  Lu</th><th bgcolor="skyblue">58<br>
-  Hi</th><th bgcolor="skyblue">59<br>
-  Ta</th><th bgcolor="skyblue">60<br>
-  W </th><th bgcolor="skyblue">61<br>
-  Re</th><th bgcolor="skyblue">62<br>
+  <td bgcolor="skyblue">55<br>
+  Cs </td><td bgcolor="skyblue"> 56<br>
+  Ba</td><td bgcolor="skyblue">AC TO NO</th><th bgcolor="skyblue">57<br>
+  Lu</td><td bgcolor="skyblue">58<br>
+  Hi</td><td bgcolor="skyblue">59<br>
+  Ta</td><td bgcolor="skyblue">60<br>
+  W </td><td bgcolor="skyblue">61<br>
+  Re</td><td bgcolor="skyblue">62<br>
   Os</th><th bgcolor="skyblue">63<br>
   Ir</th><th bgcolor="skyblue">64<br>
   Pt</th> <th bgcolor="skyblue">65<br>
@@ -114,7 +119,7 @@ Xe</th></tr>
 <tr>
   <th bgcolor="red">73<br>
   Fr</th><th bgcolor="red">74<br>
-  Ra</th><th bgcolor="red">Ac To No</th>
+  Ra</th><th ></th>
   <th bgcolor="red">103<br>
  Lr </th><th bgcolor="red">104<br>
 Fr</th><th bgcolor="red">105<br>
@@ -135,44 +140,44 @@ Og</th>
 </tr>
   </table> </center><br>
  <center> 
-<table border="5px"
-<tr>
+<table border="5px" bordercolor="white">
+<tr bgcolor="pink">
+<center>
  <th bgcolor="pink">57<br>
-La </th><th bgcolor="pink"> 58<br>
-Ce</th><th bgcolor="pink">59<br>
-Pr</th><th bgcolor="pink">60<br>
-Nd</th><th bgcolor="pink
-">61<br>
-Pm</th><th bgcolor="pink">62<br>
-Sm</th><th bgcolor="pink">63<br>
-Eu</th><th bgcolor="pink">64<br>
-Gd</th><th bgcolor="pink">65<br>
-Tb</th><th bgcolor="pink">66<br>
-Dy</th><th bgcolor="pink">67<br>
- Ho</th><th bgcolor="pink">68<br>
-Er</th><th bgcolor="pink">69<br>
-Tm</th><th bgcolor="pink">70<br>
+La </th><th > 58<br>
+Ce</th><th >59<br>
+Pr</th><th >60<br>
+Nd</th><th >61<br>
+Pm</th><th >62<br>
+Sm</th><th >63<br>
+Eu</th><th >64<br>
+Gd</th><th >65<br>
+Tb</th><th >66<br>
+Dy</th><th >67<br>
+Ho</th><th >68<br>
+Er</th><th >69<br>
+Tm</th><th >70<br>
 Yb</th>
  </center>
 </tr>
 <center>
-  <tr>
-    <th bgcolor="blue">
+  <tr bgcolor="blue">
+    <th >
     89<br>
     Ac </th>
-    <th bgcolor="blue">90<br>
-    Th</th><th bgcolor="blue">91<br>
-    Pa</th><th bgcolor="blue">92<br>
-    U</th><th bgcolor="blue">93<br>
-    Np</th><th bgcolor="blue">94<br>
-    Pu</th><th bgcolor="blue">95<br>
-    Am</th><th bgcolor="blue">96<br>
-    Cm</th><th bgcolor="blue">97<br>
-    Bk </th><th bgcolor="blue">98<br>
-    Cf</th><th bgcolor="blue">99<br>
-    Es</th><th bgcolor="blue">100<br>
-    Fm</th><th bgcolor="blue">101<br>
-    Md</th><th bgcolor="blue">102<br>
+    <th >90<br>
+    Th</th><th >91<br>
+    Pa</th><th >92<br>
+    U</th><th >93<br>
+    Np</th><th >94<br>
+    Pu</th><th >95<br>
+    Am</th><th >96<br>
+    Cm</th><th >97<br>
+    Bk </th><th >98<br>
+    Cf</th><th >99<br>
+    Es</th><th >100<br>
+    Fm</th><th >101<br>
+    Md</th><th >102<br>
     No</th>
 
   </tr>
